<resources>
    <string name="app_name">Torrent Client</string>

    <string-array name="themes">
        <item>Theme White (default)</item>
        <item>Theme Dark</item>
    </string-array>

    <string-array name="themes_values" translatable="false">
        <item>Theme_White</item>
        <item>Theme_Dark</item>
    </string-array>

    <string name="title_activity_main">Torrent Client</string>
    <string name="action_settings">Settings</string>

    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <plurals name="seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="not_permitted">Not permitted</string>
    <string name="day_symbol">d</string>
    <string name="size_kb">%1$.1f kb</string>
    <string name="size_mb">%1$.1f MB</string>
    <string name="size_gb">%1$.1f GB</string>
    <string name="free">%1$s free · ↓ %2$s · ↑ %3$s</string>
    <string name="per_second">/s</string>
    <string name="size_tab">"Size:"</string>
    <string name="start_checking">Start Checking</string>
    <string name="stop_checking">Stop Checking</string>
    <string name="create_torrent">Create Torrent</string>
    <string name="close">Close</string>
    <string name="hash_copied">Hash copied!</string>
    <string name="open_url">Open URL Browser</string>
    <string name="are_you_sure">"Are you sure ? "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="status_queue">Quque</string>
    <string name="status_downloading">Downloading</string>
    <string name="status_paused">Paused</string>
    <string name="status_seeding">Seeding</string>
    <string name="status_checking">Checking</string>
    <string name="delete_tracker">Delete Tracker</string>
    <string name="add_tracker">Add Tracker</string>
    <string name="add">Add</string>
    <string name="delete_with_data">Delete With Data</string>
    <string name="delete_torrent">Delete Torrent</string>
    <string name="rename_torrent">Rename Torrent</string>
    <string name="add_magnet">Add Magnet</string>
    <string name="error">Error</string>
    <string name="fatal">Fatal</string>
    <string name="no_folder_app">No folder view application installed</string>
    <string name="port_checking">Port checking...</string>
    <string name="port_closed">Port Closed</string>
    <string name="port_open">Port Open</string>
    <string name="interfaces">Interfaces</string>
    <string name="add_torrent">Add Torrent</string>
    <string name="torrent_list_empty">Torrents List is Empty\n\nClick \'Add\' to add new Torrent</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="pieces_tab">Pieces:</string>
    <string name="pieces">Pieces</string>
    <string name="info">Info</string>
    <string name="download_metadata">Download Metadata</string>
    <string name="path_tab">Path:</string>
    <string name="name_tab">Name:</string>
    <string name="hash_tab">Hash:</string>
    <string name="torrent">Torrent</string>
    <string name="no_peers">No Peers</string>
    <string name="creator_tab">Creator:</string>
    <string name="created_on_tab">Created On:</string>
    <string name="comment_tab">Comment:</string>
    <string name="transfering">Transfering</string>
    <string name="status_tab">Status:</string>
    <string name="progress_tab">Progress:</string>
    <string name="downloaded_tab">Downloaded:</string>
    <string name="uploaded_tab">Uploaded:</string>
    <string name="ratio_tab">Ratio:</string>
    <string name="dates">Dates</string>
    <string name="added_tab">Added:</string>
    <string name="completed_tab">Completed:</string>
    <string name="time_elapsed">Time Elapsed</string>
    <string name="downloading_tab">Downloading:</string>
    <string name="seeding_tab">Seeding:</string>
    <string name="trackers">Trackers</string>
    <string name="no_trackers">No Trackers</string>
    <string name="peers_tab">Peers:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="tab_details">DETAILS</string>
    <string name="tab_files">FILES</string>
    <string name="tab_peers">PEERS</string>
    <string name="tab_trackers">TRACKERS</string>
    <string name="n_a">N/A</string>

    <string name="dht_exchange">DHT Exchange</string>
    <string name="peer_exchange">Peer Exchange</string>
    <string name="lpd">Local Peers Discovery</string>
    <string name="announce_tab">Announce:</string>
    <string name="next_tab">next:</string>
    <string name="scrape_tab">Scrape:</string>
    <string name="check">Check</string>
    <string name="open_folder">Open Torrents Folder</string>
    <string name="exit">Exit</string>
    <string name="tap_restart">\'Tap\' to restart</string>
    <string name="torrents">Torrents</string>
    <string name="leech_tab">Leech:</string>
    <string name="seed_tab">Seed:</string>
    <string name="no_updates">No updates available</string>
    <string name="delete_search">Delete Search Engine</string>
    <string name="engine_updated">" updated to version: "</string>
    <string name="add_search_engine">Add Search Engine</string>
    <string name="added">"Added:"</string>
    <string name="clear_cookies">Clear Cookies</string>
    <string name="browser">Browser</string>
    <string name="password">Password:</string>
    <string name="login">Login:</string>
    <string name="cookies_cleared">Cookies Cleared</string>
    <string name="web_proxy_s">Web Proxy\'s</string>
    <string name="load_more">Load More</string>
    <string name="unlimited">Unlimited</string>
    <string name="kb_s">KB/s</string>
    <string name="upload_rate">Upload rate:</string>
    <string name="enable_speed_limit">Enable Speed Limit</string>
    <string name="rates">Rates</string>
    <string name="download_rate">Download rate:</string>
    <string name="google_proxy" translatable="false">Google Data Saver</string>
    <string name="tor_proxy" translatable="false">Tor</string>
    <string name="storage_path">Storage Path</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
</resources>
