<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/torrent"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:shrinkColumns="1"
            android:stretchColumns="2">

            <TableRow android:clipChildren="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:text="@string/hash_tab" />


                <com.github.axet.androidlibrary.widgets.PathMax
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">

                    <TextView
                        android:id="@+id/torrent_hash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5aaf706db5414a7696cf5c982a845e20893abcba" />
                </com.github.axet.androidlibrary.widgets.PathMax>

                <FrameLayout
                    android:id="@+id/torrent_hash_copy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clipChildren="false">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:clipChildren="false">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_content_copy_black_24dp"
                            android:tint="?attr/colorAccent" />

                    </FrameLayout>
                </FrameLayout>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/size_tab" />

                <TextView
                    android:id="@+id/torrent_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:text="11 Gb" />
            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/pieces_tab" />

                <TextView
                    android:id="@+id/torrent_pieces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:layout_span="2"
                    android:text="12323 / 11 kb" />
            </TableRow>

            <TableRow android:clipChildren="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:text="@string/path_tab" />


                <com.github.axet.androidlibrary.widgets.PathMax
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">

                    <TextView
                        android:id="@+id/torrent_path"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/sdcard/Downloads/Torrent Data/archive" />
                </com.github.axet.androidlibrary.widgets.PathMax>

                <FrameLayout
                    android:id="@+id/torrent_path_open"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clipChildren="false">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        android:clipChildren="false">

                        <ImageButton
                            android:id="@+id/torrent_path_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_folder_open_black_24dp"
                            android:tint="?attr/colorAccent" />

                    </FrameLayout>
                </FrameLayout>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/creator_tab" />

                <TextView
                    android:id="@+id/torrent_creator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:layout_span="2"
                    android:text="name" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/created_on_tab" />

                <TextView
                    android:id="@+id/torrent_created_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:layout_span="2"
                    android:text="23 June 2016 at 15:12" />
            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:text="@string/comment_tab" />

                <TextView
                    android:id="@+id/torrent_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_span="2"
                    android:background="?attr/secondBackground"
                    android:padding="3dp"
                    android:text="la la la" />
            </TableRow>

        </TableLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/transfering"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/pieces"
                    android:textStyle="bold" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clipChildren="false">

                <TableRow>

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/status_tab" />

                    <TextView
                        android:id="@+id/torrent_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="5dp"
                        android:text="@string/status_downloading" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/progress_tab" />

                    <TextView
                        android:id="@+id/torrent_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="5dp"
                        android:text="100%" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/downloaded_tab" />

                    <TextView
                        android:id="@+id/torrent_downloaded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="5dp"
                        android:text="500Mb" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/uploaded_tab" />

                    <TextView
                        android:id="@+id/torrent_uploaded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="5dp"
                        android:text="500Mb" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/ratio_tab" />

                    <TextView
                        android:id="@+id/torrent_ratio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="5dp"
                        android:text="1.0" />
                </TableRow>
            </TableLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/torrent_status_metadata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/download_metadata" />

                <RelativeLayout
                    android:id="@+id/torrent_status_parts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.github.axet.torrentclient.widgets.Pieces
                        android:id="@+id/torrent_status_pieces"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center" />

                    <ImageView
                        android:id="@+id/torrent_status_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="right|center_vertical"
                        android:layout_toRightOf="@id/torrent_status_pieces"
                        android:padding="10dp"
                        android:src="@drawable/ic_done_all_black_24dp"
                        android:tint="?attr/colorAccent" />

                </RelativeLayout>

            </FrameLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dates"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/added_tab" />

                <TextView
                    android:id="@+id/torrent_added"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:text="23 June 2016 at 15:12" />
            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/completed_tab" />

                <TextView
                    android:id="@+id/torrent_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:text="23 June 2016 at 15:12" />
            </TableRow>
        </TableLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_elapsed"
            android:textStyle="bold" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/downloading_tab" />

                <TextView
                    android:id="@+id/torrent_downloading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:text="4h" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/seeding_tab" />

                <TextView
                    android:id="@+id/torrent_seeding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:text="4h" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>