<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppThemeLight.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppThemeLight.AppBarOverlay"
            app:popupTheme="@style/AppThemeLight.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <LinearLayout
        android:id="@+id/fab_panel"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="80dp"
        android:background="?attr/round_corners"
        android:elevation="6dp"
        android:minWidth="250dp"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_pause_24dp"
            android:tint="@android:color/white"
            app:borderWidth="0dp" />

        <TextView
            android:id="@+id/fab_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="Test"
            android:textColor="@android:color/white" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_stop_black_24dp"
            android:tint="@android:color/white"
            app:borderWidth="0dp" />
    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="4dp"
        fab:fab_addButtonColorNormal="?colorAccent"
        fab:fab_addButtonColorPressed="?secondBackground"
        fab:fab_addButtonSize="normal"
        fab:fab_labelStyle="?attr/menu_labels_style"
        fab:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/torrent_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_file_upload_black_24dp"
            android:tint="@android:color/white"
            fab:fab_colorNormal="?secondBackground"
            fab:fab_colorPressed="@android:color/white"
            fab:fab_title="@string/create_torrent" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/torrent_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_folder_open_black_24dp"
            android:tint="@android:color/white"
            fab:fab_colorNormal="?secondBackground"
            fab:fab_colorPressed="@android:color/white"
            fab:fab_size="mini"
            fab:fab_title="@string/add_torrent" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/torrent_magnet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_playlist_add_black_24dp"
            android:tint="@android:color/white"
            fab:fab_colorNormal="?secondBackground"
            fab:fab_colorPressed="@android:color/white"
            fab:fab_size="mini"
            fab:fab_title="@string/add_magnet" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>
